[metadata]
name = pyneng-cli
version = 0.0.0
description = CLI tool for testing tasks from the book Python for Network Engineers
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/natenka/pyneng-cli
author = Natasha Samoylenko
author_email = "Natasha Samoylenko" <natasha.samoylenko@gmail.com>
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    pytest-json-report>=1.2
    click
    pyyaml
    pytest
    pytest-clarity
    PyGitHub
    six
    rich
    jinja2
    textfsm

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    pyneng = pyneng_cli.pyneng:cli
